@@ -20,6 +20,11 @@
 
 ** [[https://github.com/ohyecloudy/slab/compare/v1.0.5...HEAD][Unrelease]]
 
+*** :star: Added
+
+    - merge request 프리뷰를 표시할 때, 파일 이름에 따라 출력할 메시지를 설정할 수 있다
+      - =config.exs= 파일에 =config :slab, merge_request_filename_descriptor:= 설정
+
 ** [[https://github.com/ohyecloudy/slab/compare/v1.0.7...v1.0.8][v1.0.8]]
 
 *** :star: Added
